# inbox_enhanced

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  VISION.md  docker-compose.yml
server/: pyproject.toml
server/app/: config.py  main.py
server/app/actions/: engine.py  repo.py  rules.py
server/app/api/: actions.py  auth.py  buckets.py  inbox.py  jobs.py  search.py  sse.py  sync.py  tasks.py
server/app/auth/: google_oauth.py
server/app/db/: models.py
server/app/gmail/: client.py  parser.py
server/app/inbox/: bucket_repo.py  inbox_repo.py  search_repo.py
server/app/llm/: classify.py  client.py  metrics.py
server/app/realtime/: last_sync.py
server/app/task_engine/: criteria.py  (+6 more)
server/tests/: conftest.py  test_action_rules.py  test_action_tasks.py  test_actions_api.py  test_actions_engine.py  test_actions_repo.py  test_auth_router.py  test_bucket_repo.py  test_buckets_api.py  test_classify.py  test_criteria.py  test_draft_preview_task.py  test_eps_schema.py  test_extend_inbox.py  test_extract_prompt.py  test_gmail_writes.py  test_inbox_api.py  test_inbox_repo.py  test_jobs_api.py  test_jobs_repo.py  test_llm_client.py  test_llm_metrics.py  test_llm_prompts.py  test_message_parser.py  test_migration_0004.py  test_migration_0005.py  test_migration_0006.py  test_migration_0007.py  test_migration_0008.py  test_migration_0009.py  test_migration_0010.py  test_migration_0011.py  test_partial_sync.py  test_propose_task.py  test_search.py  test_sync_status.py  test_task_engine_tasks.py  test_task_repo.py  test_tasks.py  test_tasks_api.py  (+2 more)
(+108 files in other folders)
