[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery[redis]>=5.4",
    "cryptography>=48.0.1",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=2.38.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.2",
    "redis>=5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.27",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
